<resources>

    <string name="app_id">143269149215368</string>
    <string name="default_artist_name">[default artist name]</string>
    <string name="default_row_number">123</string>
    <string name="default_song_duration">[00:00]</string>
    <string name="default_song_title">[default song title]</string>
    <string name="facebook_button_login">Facebook login</string>
    <string name="facebook_button_logout">Facebook logout</string>
    <string name="tlatoa_about_main_text">Developed by @xihuani. \n June 2014</string>
    <string name="tlatoa_actionbar_back_to_main">Back To Main</string>
    <string name="tlatoa_actionbar_title">TLATOA</string>
    <string name="tlatoa_actionbar_more">More</string>
    <string name="tlatoa_actionbar_refresh">Refresh</string>
    <string name="tlatoa_app_name">Tlatoa</string>
    <string name="tlatoa_app_overview_start">START</string>
    <string name="tlatoa_app_version">Tlatoa</string>
    <string name="tlatoa_app_version_label">Version 1.0.0</string>
    <string name="tlatoa_appoverview_1st_viewpager_item_text">Con Tlatoa tendrás contigo siempre un traductor de voz a lengua de señas.</string>
    <string name="tlatoa_appoverview_2nd_viewpager_item_text">Para comenzar a usarlo, solo tendrás que acceder a la aplicación y presionar el ícono del micrófono.</string>
    <string name="tlatoa_appoverview_3rd_viewpager_item_text">Inmediatamente comenzarás a recibir en lengua de señas todo lo que le dictes a tu teléfono.</string>
    <string name="tlatoa_content_descr_for_imageviews"></string>
    <string name="tlatoa_facebook_login_button">facebook login</string>
    <string name="tlatoa_facebook_logout_button">facebook logout</string>
    <string name="tlatoa_fb_login">Facebook login</string>
    <string name="tlatoa_main_exit_confirmation_cancel_option">Cancel</string>
    <string name="tlatoa_main_exit_confirmation_exit_message">Do you really want to quit?</string>
    <string name="tlatoa_main_exit_confirmation_ok_option">OK</string>
    <string name="tlatoa_main_exit_confirmation_title">Exit</string>
    <string name="tlatoa_main_speech_not_supported_message">Your device doesn not support speech recognition</string>
    <string name="tlatoa_main_speech_not_supported_ok_option">OK</string>
    <string name="tlatoa_main_speech_not_supported_title">Ooops!</string>
    <string name="tlatoa_menu_option_about">About</string>
    <string name="tlatoa_menu_option_profile">Profile</string>
    <string name="tlatoa_main_action_bar_option_about">About</string>
    <string name="tlatoa_main_action_bar_option_profile">Profile</string>
    <string name="tlatoa_network_warning_cancel_option">Cancel</string>
    <string name="tlatoa_network_warning_message">You\'re not connected to the Internet. Connect now?</string>
    <string name="tlatoa_network_warning_title">Internet connection</string>
    <string name="tlatoa_profile_email">[email]</string>
    <string name="tlatoa_profile_username">[username]</string>
    <string name="tlatoa_translation_result_msg_no_result_title">Cancel</string>
    <string name="tlatoa_translation_result_msg_no_result_message">Oops! We did not find that phrase</string>
    <string name="tlatoa_translation_result_msg_no_result_positive_button">OK</string>
    <string name="tlatoa_translation_result_progess_dialog_title">Processing&#8230;</string>
    <string name="tlatoa_translation_result_progess_dialog_message">We are translating&#8230;</string>
    <string name="tlatoa_registration_button_confirm_registration">CONTINUE</string>
    <string name="tlatoa_registration_username_default">"@unknown"</string>
    <string name="tlatoa_registration_email_default">email@mail.com</string>
    <string name="tlatoa_registration_data_title">USERNAME</string>
    <string name="tlatoa_registration_data_value">Lalongooo</string>
    <string name="tlatoa_registration_lastname_default">HERNANDEZ</string>
    <string name="tlatoa_registration_lastname_title">LASTNAME</string>
    <string name="tlatoa_registration_name_default">George</string>
    <string name="tlatoa_registration_name_title">NAME</string>
    <string name="tlatoa_registration_review_title">Review</string>
    <string name="tlatoa_registration_user_mail">[user email]</string>
    <string name="tlatoa_registration_user_mail_title">[user email]</string>
    <string name="tlatoa_registration_publish_feed_message">Download Tlatoa</string>
    <string name="tlatoa_registration_publish_feed_name">Tlatoa: Android app for deaf people</string>
    <string name="tlatoa_registration_publish_feed_caption">No more obstacles for deaf people</string>
    <string name="tlatoa_registration_publish_feed_description">Tlatoa rompe la brecha existente entre las personas con discapacidad auditiva y la educación de calidad, servicios médicos y legales..</string>
    <string name="tlatoa_registration_publish_feed_picture_url">http://i.imgur.com/xwpXEkE.png</string>
    <string name="tlatoa_registration_publish_feed_link">http://tlatoa.co</string>
    
    <string name="tlatoa_registration_progress_dialog_title">Processing&#8230;</string>
    <string name="tlatoa_registration_progress_dialog_message">We\'re processing your request</string>
    
    <string name="tlatoa_share_button_title">Share</string>
    <string name="tlatoa_splash_app_name">TLATOA</string>
    <string name="tlatoa_splash_content_description"></string>
    <string name="tlatoa_splash_slogan">"Learn, share&#8230;dream."</string>
    <string name="tlatoa_terms_message">Please click on the button to accept the terms of service.</string>
    <string name="tlatoa_terms_title">Terms of use</string>
    <string name="tlatoa_terms_yes_option">Accept</string>
    <string name="tlatoa_time_ago_prefix"></string>
    <string name="tlatoa_time_ago_suffix">ago</string>
    <string name="tlatoa_time_ago_seconds">less than a minute</string>
    <string name="tlatoa_time_ago_minute">about a minute</string>
    <string name="tlatoa_time_ago_minutes">%d minutes</string>
    <string name="tlatoa_time_ago_hour">about an hour</string>
    <string name="tlatoa_time_ago_hours">about %d hours</string>
    <string name="tlatoa_time_ago_day">a day</string>
    <string name="tlatoa_time_ago_days">%d days</string>
    <string name="tlatoa_time_ago_month">about a month</string>
    <string name="tlatoa_time_ago_months">%d months</string>
    <string name="tlatoa_time_ago_year">about a year</string>
    <string name="tlatoa_time_ago_years">%d years</string>

    <string-array name="menu_options_string_array">
        <item>Profile</item>
        <item>About</item>
    </string-array>

    <string name="tlatoa_default_phrase_title">[default phrase]</string>
    <string name="tlatoa_default_phrase_id">123</string>
    <string name="tlatoa_default_phrase_created_at">1 min ago</string>

</resources>