<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5sp" >

    <TextView
        android:id="@+id/playlist_item_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/default_row_number"/>

    <TextView
        android:id="@+id/playlist_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/playlist_item_number"
        android:layout_marginLeft="10sp"
        android:layout_toRightOf="@+id/playlist_item_number"
        android:text="@string/default_song_title"
        android:textColor="#040404"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/playlist_item_timeago_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playlist_item_name"
        android:layout_below="@+id/playlist_item_name"
        android:text="@string/default_artist_name"
        android:textColor="#343434"
        android:textSize="12sp" />

    <Button
        android:id="@+id/playlist_item_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/playlist_item_play_button"
        android:layout_centerVertical="true"
        android:layout_marginRight="10sp"
        android:layout_toLeftOf="@+id/playlist_item_play_button"
        android:background="@drawable/tlatoa_playlist_share_button_selector"
        android:text="@string/tlatoa_share_button_title"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:focusable="false" />

    <ImageView
        android:id="@+id/playlist_item_play_button"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10sp"
        android:contentDescription="@string/tlatoa_content_descr_for_imageviews"
        android:src="@drawable/tlatoa_playlist_play_button" />

</RelativeLayout>